manifests/supervisorcluster/1.27/cns-csi.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vsphere-csi-controller
  namespace: vmware-system-csi
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: vsphere-csi-controller
  template:
    metadata:
      labels:
        app: vsphere-csi-controller
        role: vsphere-csi
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - vsphere-csi-controller
              topologyKey: "kubernetes.io/hostname"
      serviceAccount: vsphere-csi-controller
      nodeSelector:
        node-role.kubernetes.io/control-plane: ''
      tolerations:
        - operator: "Exists"
          key: "node-role.kubernetes.io/control-plane"
          effect: "NoSchedule"
      hostNetwork: true
      priorityClassName: system-node-critical
      containers:
        - name: csi-provisioner
          image: localhost:5000/vmware/csi-provisioner/csi-provisioner:v5.0.2_vmware.1
          args:
            - "--v=4"
            - "--timeout=300s"
            - "--csi-address=$(ADDRESS)"
            - "--feature-gates=Topology=true"
            - "--strict-topology"
            - "--leader-election"
            - "--enable-hostlocal-placement=true"
            - "--kube-api-qps=100"
            - "--kube-api-burst=100"
            - "--default-fstype=ext4"
            - "--use-service-for-placement-engine=false"
            - "--tkgs-ha=true"
            - "--leader-election-lease-duration=120s"
            - "--leader-election-renew-deadline=60s"
            - "--leader-election-retry-period=30s"
            - "--enable-vdpp-on-stretched-supervisor=false"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-attacher
          image: localhost:5000/vmware.io/csi-attacher:v4.7.0_vmware.1
          args:
            - "--v=4"
            - "--timeout=300s"
            - "--csi-address=$(ADDRESS)"
            - "--leader-election"
            - "--kube-api-qps=100"
            - "--kube-api-burst=100"
            - "--leader-election-lease-duration=120s"
            - "--leader-election-renew-deadline=60s"
            - "--leader-election-retry-period=30s"
            - "--worker-threads=100"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-resizer
          image: localhost:5000/vmware/kubernetes-csi_external-resizer/kubernetes-csi_external-resizer:v1.12.0_vmware.1
          imagePullPolicy: IfNotPresent
          args:
            - --v=4
            - --timeout=300s
            - --handle-volume-inuse-error=false  # Set this to true if used in vSphere 7.0U1
            - --csi-address=$(ADDRESS)
            - --leader-election
            - --kube-api-qps=100
            - --kube-api-burst=100
            - "--leader-election-lease-duration=120s"
            - "--leader-election-renew-deadline=60s"
            - "--leader-election-retry-period=30s"
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /csi
              name: socket-dir
        - name: vsphere-csi-controller
          image: localhost:5000/vmware/vsphere-csi:<vsphere_csi_ver>
          ports:
            - containerPort: 2112
              name: prometheus
              protocol: TCP
            - name: healthz
              containerPort: 9808
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 180
            failureThreshold: 3
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          volumeMounts:
            - mountPath: /etc/vmware/wcp
              name: vsphere-config-volume
              readOnly: true
            - mountPath: /csi
              name: socket-dir
            - mountPath: /etc/vmware/wcp/tls/
              name: host-vmca
        - name: liveness-probe
          image: localhost:5000/vmware.io/csi-livenessprobe:v2.14.0_vmware.1
          args:
            - "--csi-address=/csi/csi.sock"
          volumeMounts:
            - mountPath: /csi
              name: socket-dir
        - name: vsphere-syncer
          image: localhost:5000/vmware/syncer:<syncer_ver>
          args:
            - "--leader-election"
            - "--leader-election-lease-duration=120s"
            - "--leader-election-renew-deadline=60s"
            - "--leader-election-retry-period=30s"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 2113
              name: prometheus
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          volumeMounts:
            - mountPath: /etc/vmware/wcp
              name: vsphere-config-volume
              readOnly: true
            - mountPath: /etc/vmware/wcp/tls/
              name: host-vmca
        - name: csi-snapshotter
          image: localhost:5000/vmware.io/csi-snapshotter:v6.1.0_vmware.7
          args:
            - "--v=4"
            - "--timeout=300s"
            - "--csi-address=$(ADDRESS)"
            - "--leader-election"
            - "--kube-api-qps=100"
            - "--kube-api-burst=100"
            - "--extra-create-metadata"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /csi
              name: socket-dir
      volumes:
        - name: vsphere-config-volume
          secret:
            secretName: vsphere-config-secret
        - name: socket-dir
          emptyDir: {}
        - name: host-vmca
          hostPath:
            path: /etc/vmware/wcp/tls/
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: vsphere-csi-controller
  namespace: vmware-system-csi
  labels:
    app: vsphere-csi-controller
spec:
  ports:
    - name: ctlr
      port: 2112
      targetPort: 2112
      protocol: TCP
    - name: syncer
      port: 2113
      targetPort: 2113
      protocol: TCP
  selector:
    app: vsphere-csi-controller
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: vmware-system-csi-webhook-service
  namespace: vmware-system-csi
  labels:
    app: vsphere-csi-webhook
spec:
  ports:
    - port: 443
      targetPort: 9883
  selector:
    app: vsphere-csi-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: vmware-system-csi-validating-webhook-configuration
  labels:
    app: vsphere-csi-webhook
  annotations:
    cert-manager.io/inject-ca-from: vmware-system-csi/vmware-system-csi-serving-cert
webhooks:
  - name: validation.csi.vsphere.vmware.com
    clientConfig:
      service:
        name: vmware-system-csi-webhook-service
        namespace: vmware-system-csi
        path: "/validate"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1", "v1beta1"]
        operations:  ["CREATE", "UPDATE", "DELETE"]
        resources:   ["persistentvolumeclaims"]
        scope: "Namespaced"
      - apiGroups:   ["snapshot.storage.k8s.io"]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["volumesnapshots"]
        scope:       "Namespaced"
    sideEffects: None
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vsphere-csi-webhook
  namespace: vmware-system-csi
  labels:
    app: vsphere-csi-webhook
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: vsphere-csi-webhook
  template:
    metadata:
      labels:
        app: vsphere-csi-webhook
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - vsphere-csi-webhook
              topologyKey: kubernetes.io/hostname
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      terminationGracePeriodSeconds: 10
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - effect: NoExecute
          key: node.alpha.kubernetes.io/notReady
          operator: Exists
        - effect: NoExecute
          key: node.alpha.kubernetes.io/unreachable
          operator: Exists
      containers:
        - name: vsphere-webhook
          image: localhost:5000/vmware/syncer:<syncer_ver>
          args:
            - "--operation-mode=WEBHOOK_SERVER"
            - "--fss-name=internal-feature-states.csi.vsphere.vmware.com"
            - "--fss-namespace=$(CSI_NAMESPACE)"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9883
              name: webhook-server
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: webhook-certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            defaultMode: 420
            secretName: vmware-system-csi-webhook-service-cert
